--- a/Web/package.json
+++ b/Web/package.json
@@ -59,7 +59,7 @@
     "@emotion/react": "^11.9.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/lodash": "^4.14.172",
-    "antd": "^4.15.4",
+    "antd": "4.19.5",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.13.1",
