--- a/Web/package.json
+++ b/Web/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/lodash": "^4.14.172",
     "antd": "4.19.5",
@@ -68,6 +69,7 @@
     "npm": "^8.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.1",
@@ -78,9 +80,9 @@
   },
   "browserslist": {
     "production": [
-      "last 1 version",
-      "> 1%",
-      "ie 11"
+      "last 10 chrome version",
+      "last 10 firefox version",
+      "last 10 edge version"
     ],
     "dev": [
       "last 1 chrome version",
