--- a/Web/package.json
+++ b/Web/package.json
@@ -30,8 +30,11 @@
     "@types/react": "17.0.30",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "babel-plugin-styless": "^1.4.25",
     "browserlist": "^1.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
@@ -73,6 +76,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.1",
+    "styled-components": "^5.3.5",
     "webpack-manifest-plugin": "^4.0.2"
   },
   "resolutions": {
