--- a/SyncManagerApi/appsettings.json
+++ b/SyncManagerApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "pgsql": "User ID=admin;Password=Admin123;Host=10.0.0.78;Port=5433;Database=BrowserHistorySync;Pooling=true;"
+    "pgsql": "User ID=admin;Password=Admin123;Host=local.tp.me;Port=5433;Database=BrowserHistorySync;Pooling=true;"
   }
   
 }
