feat: homepage step 1

--- a/Web/tsconfig.json
+++ b/Web/tsconfig.json
@@ -18,9 +18,6 @@
     "moduleResolution": "node",
     "noEmit": true,
     "experimentalDecorators": true,
-    "baseUrl": ".",
-  },
-  "include": [
-    "src"
-  ]
+    "baseUrl": "."
+  }
 }
