--- a/SyncManagerApi/wwwroot/manifest.json
+++ b/SyncManagerApi/wwwroot/manifest.json
@@ -1,11 +1,16 @@
 {
-  "index.js": "auto/index.5a7f4c80.js",
-  "154.19afb9e6.js": "auto/154.19afb9e6.js",
-  "672.7e85dcca.js": "auto/672.7e85dcca.js",
-  "194.a4a9613c.js": "auto/194.a4a9613c.js",
-  "578.9e4a4775.js": "auto/578.9e4a4775.js",
-  "318.e95ebbc4.js": "auto/318.e95ebbc4.js",
-  "768.464881db.js": "auto/768.464881db.js",
-  "logo.png": "auto/83c12eede95f860c27cd0d5c9d38ce85.png",
+  "index.js": "auto/index.6dd83e13.js",
+  "686.3bb9840c.js": "auto/686.3bb9840c.js",
+  "330.8de07707.js": "auto/330.8de07707.js",
+  "77.bcc9a65d.js": "auto/77.bcc9a65d.js",
+  "612.f5bc7924.js": "auto/612.f5bc7924.js",
+  "281.af444b91.js": "auto/281.af444b91.js",
+  "search.svg": "auto/490d124811d9527aa5066c2812dc4cfd.svg",
+  "enter.svg": "auto/377814eef48b5f25c3e9be32b0735797.svg",
+  "logo.png": "auto/5d671c97c56c550e2d046f63f2107c8b.png",
+  "baidu.ico": "auto/386a6d6e18b6baca332d497fd84497b2.ico",
+  "bing.png": "auto/f3699179d7aa59e3b841f24ccaa17df7.png",
+  "historySync.png": "auto/851378514f50d38c2b60bb0769a84f14.png",
+  "google.ico": "auto/68113a27e75d141340fe204d8f2dabfd.ico",
   "index.html": "auto/index.html"
 }
