feat: add favicon icon

--- a/SyncManagerApi/wwwroot/manifest.json
+++ b/SyncManagerApi/wwwroot/manifest.json
@@ -1,16 +1,17 @@
 {
-  "index.js": "auto/index.b2766993.js",
-  "686.7113d948.js": "auto/686.7113d948.js",
-  "330.e9cbef9f.js": "auto/330.e9cbef9f.js",
+  "index.js": "auto/index.92b64239.js",
+  "686.e02a8138.js": "auto/686.e02a8138.js",
+  "438.7e1f1101.js": "auto/438.7e1f1101.js",
   "77.8d76fa8b.js": "auto/77.8d76fa8b.js",
   "612.f5bc7924.js": "auto/612.f5bc7924.js",
   "281.af444b91.js": "auto/281.af444b91.js",
-  "search.svg": "auto/f094bf70effe140dec85a9ee5f7eb57f.svg",
-  "enter.svg": "auto/fb28ed80f62bbcd271ff44f44f75f96a.svg",
+  "search.svg": "auto/490d124811d9527aa5066c2812dc4cfd.svg",
+  "enter.svg": "auto/377814eef48b5f25c3e9be32b0735797.svg",
   "logo.png": "auto/5d671c97c56c550e2d046f63f2107c8b.png",
   "baidu.ico": "auto/386a6d6e18b6baca332d497fd84497b2.ico",
   "bing.png": "auto/f3699179d7aa59e3b841f24ccaa17df7.png",
   "historySync.png": "auto/851378514f50d38c2b60bb0769a84f14.png",
+  "favicon.ico": "auto/favicon.ico",
   "google.ico": "auto/68113a27e75d141340fe204d8f2dabfd.ico",
   "index.html": "auto/index.html"
 }
