--- a/SyncManagerApi/wwwroot/manifest.json
+++ b/SyncManagerApi/wwwroot/manifest.json
@@ -1,16 +1,15 @@
 {
-  "index.js": "auto/index.db44c6e2.js",
-  "597.10442919.js": "auto/597.10442919.js",
-  "905.001f0c27.js": "auto/905.001f0c27.js",
-  "329.b017edcb.js": "auto/329.b017edcb.js",
-  "843.6e88d241.js": "auto/843.6e88d241.js",
-  "932.2e214978.js": "auto/932.2e214978.js",
+  "index.js": "auto/index.226b9e73.js",
+  "597.4397bbf5.js": "auto/597.4397bbf5.js",
+  "905.d2df1914.js": "auto/905.d2df1914.js",
+  "329.2ee00239.js": "auto/329.2ee00239.js",
+  "357.5076ad00.js": "auto/357.5076ad00.js",
+  "782.234cd168.js": "auto/782.234cd168.js",
   "search.svg": "auto/f094bf70effe140dec85a9ee5f7eb57f.svg",
   "enter.svg": "auto/fb28ed80f62bbcd271ff44f44f75f96a.svg",
-  "logo.png": "auto/5d671c97c56c550e2d046f63f2107c8b.png",
   "baidu.ico": "auto/386a6d6e18b6baca332d497fd84497b2.ico",
   "bing.png": "auto/f3699179d7aa59e3b841f24ccaa17df7.png",
-  "historySync.png": "auto/851378514f50d38c2b60bb0769a84f14.png",
+  "icon128.png": "auto/851378514f50d38c2b60bb0769a84f14.png",
   "favicon.ico": "auto/favicon.ico",
   "google.ico": "auto/68113a27e75d141340fe204d8f2dabfd.ico",
   "index.html": "auto/index.html"
