--- a/Web/package.json
+++ b/Web/package.json
@@ -29,7 +29,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@types/react": "17.0.30",
     "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
@@ -65,7 +65,7 @@
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/lodash": "^4.14.172",
-    "antd": "4.19.5",
+    "antd": "4.20.4",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.13.1",
@@ -78,7 +78,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-is": "^18.1.0",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6",
     "redux": "^4.1.1",
     "styled-components": "^5.3.5",
     "webpack-manifest-plugin": "^4.0.2"
