feat: add rule manager page

--- a/SyncManagerApi/wwwroot/manifest.json
+++ b/SyncManagerApi/wwwroot/manifest.json
@@ -1,16 +1,20 @@
 {
-  "index.js": "auto/index.638890cf.js",
-  "597.4397bbf5.js": "auto/597.4397bbf5.js",
-  "905.02774fef.js": "auto/905.02774fef.js",
-  "329.2ee00239.js": "auto/329.2ee00239.js",
-  "357.5076ad00.js": "auto/357.5076ad00.js",
-  "782.234cd168.js": "auto/782.234cd168.js",
-  "search.svg": "auto/490d124811d9527aa5066c2812dc4cfd.svg",
-  "enter.svg": "auto/377814eef48b5f25c3e9be32b0735797.svg",
-  "baidu.ico": "auto/386a6d6e18b6baca332d497fd84497b2.ico",
-  "bing.png": "auto/f3699179d7aa59e3b841f24ccaa17df7.png",
-  "icon128.png": "auto/851378514f50d38c2b60bb0769a84f14.png",
-  "favicon.ico": "auto/favicon.ico",
-  "google.ico": "auto/68113a27e75d141340fe204d8f2dabfd.ico",
-  "index.html": "auto/index.html"
+  "index.js": "/index.1b988aa0.js",
+  "66.822a3fba.js": "/66.822a3fba.js",
+  "524.e5c28b23.js": "/524.e5c28b23.js",
+  "634.8a0aa07e.js": "/634.8a0aa07e.js",
+  "358.32e97945.js": "/358.32e97945.js",
+  "768.66ddf4b4.js": "/768.66ddf4b4.js",
+  "837.a58e85a4.js": "/837.a58e85a4.js",
+  "38.122d354e.js": "/38.122d354e.js",
+  "893.ce3ce278.js": "/893.ce3ce278.js",
+  "82.1eeeb177.js": "/82.1eeeb177.js",
+  "search.svg": "/490d124811d9527aa5066c2812dc4cfd.svg",
+  "enter.svg": "/377814eef48b5f25c3e9be32b0735797.svg",
+  "baidu.ico": "/386a6d6e18b6baca332d497fd84497b2.ico",
+  "bing.png": "/f3699179d7aa59e3b841f24ccaa17df7.png",
+  "icon128.png": "/851378514f50d38c2b60bb0769a84f14.png",
+  "favicon.ico": "/favicon.ico",
+  "google.ico": "/68113a27e75d141340fe204d8f2dabfd.ico",
+  "index.html": "/index.html"
 }
