--- a/SyncManagerApi/appsettings.json
+++ b/SyncManagerApi/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "pgsql": "User ID=admin;Password=Admin123;Host=tp.local.me;Port=5433;Database=BrowserHistorySync;Pooling=true;"
-  }
-  
+  },
+  "AuthSecret": "123456"
 }
