feat: add cookie auth

--- a/SyncManagerApi/wwwroot/manifest.json
+++ b/SyncManagerApi/wwwroot/manifest.json
@@ -1,20 +1,21 @@
 {
-  "index.js": "/index.1b988aa0.js",
-  "66.822a3fba.js": "/66.822a3fba.js",
-  "524.e5c28b23.js": "/524.e5c28b23.js",
-  "634.8a0aa07e.js": "/634.8a0aa07e.js",
-  "358.32e97945.js": "/358.32e97945.js",
-  "768.66ddf4b4.js": "/768.66ddf4b4.js",
-  "837.a58e85a4.js": "/837.a58e85a4.js",
-  "38.122d354e.js": "/38.122d354e.js",
-  "893.ce3ce278.js": "/893.ce3ce278.js",
-  "82.1eeeb177.js": "/82.1eeeb177.js",
-  "search.svg": "/490d124811d9527aa5066c2812dc4cfd.svg",
-  "enter.svg": "/377814eef48b5f25c3e9be32b0735797.svg",
+  "index.js": "/index.60639449.js",
+  "719.de51ac9d.js": "/719.de51ac9d.js",
+  "524.659b5f0d.js": "/524.659b5f0d.js",
+  "634.58f2b7e8.js": "/634.58f2b7e8.js",
+  "358.ab2077ea.js": "/358.ab2077ea.js",
+  "654.02ebc8a5.js": "/654.02ebc8a5.js",
+  "899.f2b70c71.js": "/899.f2b70c71.js",
+  "48.fa1b2293.js": "/48.fa1b2293.js",
+  "595.b9cd4009.js": "/595.b9cd4009.js",
+  "930.efc85751.js": "/930.efc85751.js",
+  "search.svg": "/f094bf70effe140dec85a9ee5f7eb57f.svg",
+  "enter.svg": "/fb28ed80f62bbcd271ff44f44f75f96a.svg",
   "baidu.ico": "/386a6d6e18b6baca332d497fd84497b2.ico",
   "bing.png": "/f3699179d7aa59e3b841f24ccaa17df7.png",
   "icon128.png": "/851378514f50d38c2b60bb0769a84f14.png",
   "favicon.ico": "/favicon.ico",
   "google.ico": "/68113a27e75d141340fe204d8f2dabfd.ico",
-  "index.html": "/index.html"
+  "index.html": "/index.html",
+  "_setting.js": "/_setting.js"
 }
