--- a/SyncManagerApi/appsettings.json
+++ b/SyncManagerApi/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "pgsql": "User ID=admin;Password=Admin123;Host=tp.local.me;Port=5433;Database=BrowserHistorySync;Pooling=true;"
-  },
-  "AuthSecret": "123456"
+  "AllowedHosts": "*"
 }
