fix: update css style

--- a/SyncManagerApi/Dockerfile
+++ b/SyncManagerApi/Dockerfile
@@ -2,6 +2,9 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 EXPOSE 80
 EXPOSE 443
 
+ENV DBType="Postgresql" AuthSecret="123456" \
+    DBConnectionStr=""
+
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS restore-all
 WORKDIR /SyncManagerApi
 COPY . .
