--- a/WebExtension/package.json
+++ b/WebExtension/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "cross-env gulp build",
     "start": "cross-env gulp dev",
-    "pkg_chrome":"cross-env gulp pkg_chrome"
+    "pkg_chrome": "cross-env gulp pkg_chrome"
   },
   "devDependencies": {
     "@types/firefox-webext-browser": "^94.0.1",
@@ -25,6 +25,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "requirejs": "^2.3.6",
     "webextension-polyfill": "^0.9.0"
