--- a/WebExtension/src/static/manifest.json
+++ b/WebExtension/src/static/manifest.json
@@ -7,19 +7,14 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
+      "matches": ["<all_urls>"],
       "all_frames": false,
       "run_at": "document_start",
-      "js": [
-        "common.js",
-        "content.js"
-      ]
+      "js": ["common.js", "content.js"]
     }
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' data: ;"
   },
   "options_ui": {
     "page": "option.html",
@@ -36,15 +31,7 @@
     "128": "128.png"
   },
   "manifest_version": 3,
-  "permissions": [
-    "tabs",
-    "bookmarks",
-    "storage",
-    "alarms",
-    "webNavigation"
-  ],
-  "version": "0.0.3",
-  "host_permissions": [
-    "*://*/*"
-  ]
+  "permissions": ["tabs", "bookmarks", "storage", "alarms", "webNavigation"],
+  "version": "0.0.4",
+  "host_permissions": ["*://*/*"]
 }
